// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-css-modules build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-b8efa93ad3ab8918f8db.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f6013ffd906dccb8790c.js\\" defer=\\"\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-1d95f7f495034eec0220.js\\" defer=\\"\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-012abf00716afb8575d2.js\\" defer=\\"\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-b8efa93ad3ab8918f8db.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f6013ffd906dccb8790c.js\\" defer></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-1d95f7f495034eec0220.js\\" defer></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-012abf00716afb8575d2.js\\" defer></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`typescript-css-modules build should generate the expected files 1`] = `
Object {
  "index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-b8efa93ad3ab8918f8db.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f6013ffd906dccb8790c.js\\" defer></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-1d95f7f495034eec0220.js\\" defer></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-012abf00716afb8575d2.js\\" defer></script>
  </body>
</html>",
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "main-012abf00716afb8575d2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-b8efa93ad3ab8918f8db.css": "._1brbpTo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}._1brbpTo ._3YtmnHj{font-size:32px}
.Jlnxw97{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.Jlnxw97 .lwsthgY{color:red}
",
  "runtime-f6013ffd906dccb8790c.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-1d95f7f495034eec0220.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules build-ssr should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
          <meta charset=\\"UTF-8\\">
          <title>My Awesome Project</title>
          <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
          <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-b8efa93ad3ab8918f8db.css\\">
        </head>
        <body>
          <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
          <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f6013ffd906dccb8790c.js\\" defer=\\"\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-1d95f7f495034eec0220.js\\" defer=\\"\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-012abf00716afb8575d2.js\\" defer=\\"\\"></script>
        
      
    </body></html>",
  "errors": Array [],
  "sourceHtml": "
      <!DOCTYPE html>
      <html>
        <head>
          <meta charset=\\"UTF-8\\">
          <title>My Awesome Project</title>
          <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
          <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-b8efa93ad3ab8918f8db.css\\" />
        </head>
        <body>
          <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
          <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f6013ffd906dccb8790c.js\\" defer></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-1d95f7f495034eec0220.js\\" defer></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-012abf00716afb8575d2.js\\" defer></script>
        </body>
      </html>
    ",
  "warnings": Array [],
}
`;

exports[`typescript-css-modules build-ssr should generate the expected files 1`] = `
Object {
  "assets.json": "{\\"main\\":{\\"js\\":[\\"http://localhost:4003/runtime-f6013ffd906dccb8790c.js\\",\\"http://localhost:4003/vendors~main-1d95f7f495034eec0220.js\\",\\"http://localhost:4003/main-012abf00716afb8575d2.js\\"],\\"css\\":\\"http://localhost:4003/main-b8efa93ad3ab8918f8db.css\\"}}",
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "main-012abf00716afb8575d2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-b8efa93ad3ab8918f8db.css": "._1brbpTo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}._1brbpTo ._3YtmnHj{font-size:32px}
.Jlnxw97{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.Jlnxw97 .lwsthgY{color:red}
",
  "runtime-f6013ffd906dccb8790c.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-1d95f7f495034eec0220.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/main.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\" defer=\\"\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~main.js\\" defer=\\"\\"></script>
<script type=\\"text/javascript\\" src=\\"/main.js\\" defer=\\"\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/main.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\" defer></script>
<script type=\\"text/javascript\\" src=\\"/vendors~main.js\\" defer></script>
<script type=\\"text/javascript\\" src=\\"/main.js\\" defer></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
